--- a/index.html
+++ b/index.html
@@ -82,36 +82,36 @@
             <div>
                 <h3>Abstract</h3>
                 <ul>
-                    <li>Branches</li>
+                    <li><a href="/">Branches</a></li>
                 </ul>
             </div>
             <div>
                 <h3>Resources</h3>
                 <ul>
-                    <li>Blog</li>
-                    <li>Help Center</li>
-                    <li>Release Notes</li>
-                    <li>Status</li>
+                    <li><a href="/">Blog</a></li>
+                    <li><a href="/">Help Center</a></li>
+                    <li><a href="/">Release Notes</a></li>
+                    <li><a href="/">Status</a></li>
                 </ul>
             </div>
             <div>
                 <h3>Community</h3>
                 <ul>
-                    <li>Twitter</li>
-                    <li>Linkedin</li>
-                    <li>Facebook</li>
-                    <li>Dribble</li>
-                    <li>Podcast</li>
+                    <li><a href="/">Twitter</a></li>
+                    <li><a href="/">Linkedin</a></li>
+                    <li><a href="/">Facebook</a></li>
+                    <li><a href="/">Dribble</a></li>
+                    <li><a href="/">Podcast</a></li>
                 </ul>
             </div>
             <div>
                 <h3>Company</h3>
                 <ul>
-                    <li>About Us</li>
-                    <li>Careers</li>
-                    <li>Legal</li>
-                    <li><h4>Contact Us</h4></li>
-                    <li>info@abstract.com</li>
+                    <li><a href="/">About Us</a></li>
+                    <li><a href="/">Careers</a></li>
+                    <li><a href="/">Legal</a></li>
+                    <li><h4><a href="/">Contact Us</a></h4></li>
+                    <li><a href="mailto:info@abstract.com">info@abstract.com</a></li>
                 </ul>
             </div>
             <div>
